--- a/MemeMaker/MainWindow.xaml
+++ b/MemeMaker/MainWindow.xaml
@@ -30,17 +30,17 @@
                 <TextBlock Grid.Column="0" Grid.Row="3">Ancho</TextBlock>
                 <Slider x:Name="SliderAncho" Grid.Column="1" Grid.Row="3"></Slider>
                 <TextBlock Grid.Column="0" Grid.Row="4">Imagen</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
+                <TextBox x:Name="RutaImagen" Grid.Column="1" Grid.Row="4"></TextBox>
                 <TextBlock Grid.Column="0" Grid.Row="5">Borde</TextBlock> 
-                <CheckBox Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" IsChecked="True"></CheckBox>
+                <CheckBox x:Name="PonerBorde"  Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" IsChecked="True"></CheckBox>
             </Grid>
-            <Grid Background="Pink">
-                <Border>
-                    <Image Height="{Binding ElementName=SliderAlto, Path=Value}" Width="{Binding ElementName=SliderAncho, Path=Value}"></Image>                    
-                </Border>
-                <TextBlock HorizontalAlignment="Center" Margin="5" Text="{Binding ElementName=TextBoxSuperior, Path=Text  }"></TextBlock>
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Text="{Binding ElementName=TextBoxInferior, Path=Text}"></TextBlock>
-            </Grid>
+            <Border Height="{Binding ElementName=SliderAlto, Path=Value}" Width="{Binding ElementName=SliderAncho, Path=Value}" BorderBrush="Black" BorderThickness="{Binding ElementName=PonerBorde, Path=IsChecked}">
+                <Grid Background="Pink"  Height="{Binding ElementName=SliderAlto, Path=Value}" Width="{Binding ElementName=SliderAncho, Path=Value}">                
+                    <Image Stretch="Fill" Source="{Binding ElementName= RutaImagen, Path=Text}"  ></Image>                  
+                    <TextBlock HorizontalAlignment="Center" Margin="5" Text="{Binding ElementName=TextBoxSuperior, Path=Text  }"></TextBlock>
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Text="{Binding ElementName=TextBoxInferior, Path=Text}"></TextBlock>
+                </Grid>
+            </Border>
         </StackPanel>
         
         
