--- a/MemeMaker/App.xaml
+++ b/MemeMaker/App.xaml
@@ -12,6 +12,12 @@
         <Style TargetType="{x:Type Label}">
             <Setter Property="Margin" Value="2"/>
         </Style>
+
+        <Style TargetType="{x:Type TextBlock}" x:Key="Imagen">
+            <Setter Property="FontFamily" Value="Comic Sans MS"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontWeight" Value="Bold"/>            
+        </Style>
         
         <Style TargetType="{x:Type Slider}">
             <Setter Property="VerticalAlignment" Value="Center"/>
